--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     </style>
 </head>
 <body>
-    <h1>주일학교 성경 진도 지도</h1>
+    <h1>천안중부 주일학교 성경 투어</h1>
     <div class="auth-buttons">
         <button id="loginButton">로그인</button>
         <div id="welcomeMessage"></div>
