--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
         <label for="bookSelect">성경지도: </label>
         <select id="bookSelect">
             <option value="마가복음" selected>마가복음</option>
-            <option value="요한복음">요한복음</option>
+            <option value="요한복음" hidden>요한복음</option>
         </select>
         <label for="chapter">장 입력: </label>
         <input type="number" id="chapter" min="1" placeholder="1-16">
