--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             border-bottom: 1px solid #eee;
         }
         #cheerInput {
-            width: 100%;
+            width: calc(100% - 20px); /* 보내기 버튼과 동일한 가로 크기, padding 고려 */
             padding: 10px;
             border: 1px solid #ddd;
             border-radius: 5px;
