--- a/index.html
+++ b/index.html
@@ -20,16 +20,18 @@
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
         }
         .container {
-            max-width: 1400px; /* 지도(800px) + 좌우 섹션(280px * 2) + 여유분 */
+            max-width: 1400px;
             margin: 0 auto;
             display: flex;
             gap: 20px;
             justify-content: center;
-            align-items: flex-start;
+            align-items: flex
+
+-start;
         }
         #map {
-            width: 800px; /* 기존 크기 유지 */
-            height: 400px; /* 기존 크기 유지 */
+            width: 800px;
+            height: 400px;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border: 1px solid #ddd;
@@ -37,7 +39,7 @@
             background-color: #fff;
             display: none;
             order: 2;
-            overflow: hidden; /* 경로가 밖으로 나가지 않도록 */
+            overflow: hidden;
         }
         .book {
             position: absolute;
@@ -276,7 +278,8 @@
             border-bottom: 1px solid #eee;
         }
         #cheerInput {
-            width: calc(100% - 20px); /* 보내기 버튼과 동일한 가로 크기, padding 고려 */
+            width: 100%;
+            box-sizing: border-box;
             padding: 10px;
             border: 1px solid #ddd;
             border-radius: 5px;
@@ -290,6 +293,7 @@
         }
         #cheerSubmit {
             width: 100%;
+            box-sizing: border-box;
             padding: 10px;
             background-color: #e74c3c;
             color: white;
