--- a/index.html
+++ b/index.html
@@ -312,8 +312,27 @@
     <h1>천안중부 주일학교 성경맵 투어</h1>
     <div class="auth-buttons">
         <button id="loginButton">로그인</button>
+        <button id="changePasswordButton" style="display: none;">비밀번호 변경</button> <!-- 로그인 후 표시 -->
         <div id="welcomeMessage"></div>
     </div>
+    <div id="changePasswordModal" class="modal">
+        <div class="modal-content">
+            <h2>비밀번호 변경</h2>
+            <form id="changePasswordForm">
+                <div class="form-group">
+                    <label for="currentPassword">현재 비밀번호</label>
+                    <input type="password" id="currentPassword" required>
+                </div>
+                <div class="form-group">
+                    <label for="newPassword">새 비밀번호</label>
+                    <input type="password" id="newPassword" required>
+                </div>
+                <button type="submit">변경</button>
+            </form>
+            <div id="changePasswordMessage"></div>
+        </div>
+    </div>
+  
     <div id="controls">
         <label for="bookSelect">성경지도: </label>
         <select id="bookSelect">
@@ -361,8 +380,7 @@
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-app.js";
         import { getDatabase, ref, set, get } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-database.js";
-        import { getAuth, signInWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-auth.js";
-        import { books } from './books.js';
+        import { getAuth, signInWithEmailAndPassword, signOut, onAuthStateChanged, updatePassword, reauthenticateWithCredential, EmailAuthProvider } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-auth.js";        import { books } from './books.js';
 
         const firebaseConfig = {
             apiKey: "AIzaSyB8yjBSW6UZX_mzZymXqIHgMxC4xEXx3Bo",
@@ -386,12 +404,14 @@
         const chapterInput = document.getElementById("chapter");
 
         onAuthStateChanged(auth, (user) => {
+            const changePasswordButton = document.getElementById("changePasswordButton");
             if (user) {
                 currentUser = user.uid;
                 loginButton.textContent = "로그아웃";
                 welcomeMessage.textContent = `${user.email.split('@')[0]}님 환영합니다.`;
                 document.getElementById("map").style.display = "block";
                 document.getElementById("controls").style.display = "block";
+                changePasswordButton.style.display = "inline-block"; // 로그인 시 표시
                 displayBook(bookSelect.value);
                 loadAllStudents(bookSelect.value);
                 loadUpdateLog();
@@ -402,10 +422,52 @@
                 welcomeMessage.textContent = "";
                 document.getElementById("map").style.display = "none";
                 document.getElementById("controls").style.display = "none";
+                changePasswordButton.style.display = "none"; // 로그아웃 시 숨김
                 document.getElementById("loginModal").style.display = "block";
             }
         });
+// 비밀번호 변경 버튼 이벤트
+document.getElementById("changePasswordButton").addEventListener("click", () => {
+    document.getElementById("changePasswordModal").style.display = "block";
+});
 
+// 비밀번호 변경 폼 제출 이벤트
+document.getElementById("changePasswordForm").addEventListener("submit", async (e) => {
+    e.preventDefault();
+    const currentPassword = document.getElementById("currentPassword").value;
+    const newPassword = document.getElementById("newPassword").value;
+    const messageDiv = document.getElementById("changePasswordMessage");
+    const user = auth.currentUser;
+
+    try {
+        // 현재 비밀번호로 재인증
+        const credential = EmailAuthProvider.credential(user.email, currentPassword);
+        await reauthenticateWithCredential(user, credential);
+
+        // 새 비밀번호로 업데이트
+        await updatePassword(user, newPassword);
+        messageDiv.style.color = "green";
+        messageDiv.textContent = "비밀번호가 성공적으로 변경되었습니다.";
+        setTimeout(() => {
+            document.getElementById("changePasswordModal").style.display = "none";
+            messageDiv.textContent = "";
+        }, 2000);
+    } catch (error) {
+        messageDiv.style.color = "red";
+        messageDiv.textContent = "변경 실패: " + error.message;
+    }
+});
+
+// 모달 닫기 이벤트 (기존 코드에 추가)
+window.addEventListener("click", (e) => {
+    if (e.target.className === "modal") {
+        e.target.style.display = "none";
+        document.getElementById("changePasswordMessage").textContent = ""; // 메시지 초기화
+    }
+});
+
+
+        
         function updateChapterRange() {
             const selectedBook = bookSelect.value;
             const maxChapters = books[selectedBook].chapters;
