--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             position: absolute;
             width: 24px;
             height: 24px;
-            background-color: #f1c40f;
+            background-color: #16a085;
             border-radius: 50%;
             text-align: center;
             line-height: 24px;
